--- a/app/templates/medtech/dashboard.html
+++ b/app/templates/medtech/dashboard.html
@@ -53,7 +53,7 @@
     <main>
         <!-- DASHBOARD -->
         <div class="doctor-bg">
-            <img src="{{ url_for('static', filename='images/Medtech BG.png') }}">
+            <img src="{{ url_for('static', filename='images/DocCare BG.png') }}">
             <div class="greetings-name">
                 <p>Welcome,</p>
                 <h2>{{ info[0] }}</h2>
