--- a/app/static/doctor_style.css
+++ b/app/static/doctor_style.css
@@ -1,11 +1,146 @@
 @import "base_style.css";
 
+/* -------------------------------------------- DASHBOARD -------------------------------------------- */
+.grid_container {
+    position: relative;
+    display: grid;
+    margin-top: 10px;
+    grid-template-columns: auto 350px;
+    grid-template-rows: auto 5px;
+    padding: 10px;
+    height: 69%;
+}
+
+.grid_item {
+    padding: 15px;
+    border: 1px solid var(--grayC);
+    text-align: center;
+}
+
+/* PATIENTS */
+.patients_short {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    gap: 130px;
+}
+
+.patient_buttons {
+    margin-top: 5px;
+    gap: 5px;
+    display: flex;
+}
+
+.add_patient_btn img {
+    width: 35px;
+    padding: 10px;
+    background-color: var(--darkBlue);
+    border-radius: 5px;
+}
+
+.see_more {
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    width: 85px;
+    height: 35px;
+    font-size: 13px;
+    cursor: pointer;
+    background-color: white;
+    color: var(--darkBlue);
+    border: 1px solid var(--grayA);
+    font-weight: 900;
+}
+
+.patient_short_table, .appointment_short_table {
+    position: relative;
+    font-size: 14px;
+    margin-top: 5px;
+    width: 100%;
+}
+
+.patient_short_table td {
+    padding: 11px;
+    width: 50px;
+    background-color: var(--blueC);
+}
+
+.patient_record img {
+    width: 30px;
+    cursor: pointer;
+}
+
+/* APPOINTMENT */
+.appointement_short_container {
+    position: relative;  
+    height: 310px; 
+    overflow: auto;
+}
+
+.appoint_list p {
+    margin-bottom: 10px;
+}
+
+.appointement_short_container::-webkit-scrollbar {
+    width: 10px; 
+}
+
+.appointement_short_container::-webkit-scrollbar-thumb {
+    background-color: var(--blueB); 
+    border-radius: 5px;
+}
+
+.appointement_short_container::-webkit-scrollbar-track {
+    background-color: none; 
+    margin-top: 35px;
+}
+
+.appointment_short_table thead {
+    position: sticky;
+    top: 0;
+    font-size: 14px;
+    height: 30px;
+}
+
+.appointment_short_table th {
+    border-bottom: 1px solid var(--blueC);
+}
+
+.appointment_short_table td {
+    padding: 10px;
+    border: 5px solid white;
+}
+
+.status_short {
+    border-radius: 70px;
+    width: 130px;
+    color: var(--darkBlue);
+}
+
+.status_short.cancelled {
+    background-color: #ffb3ba;
+    color: var(--darkBlue);
+}
+
+.status_short.done {
+    background-color: #baffc9;
+}
+
+.status_short.pending {
+    background-color: #ffffba;
+}
+
+.status_short.inprogress {
+    background-color: #bae1ff;
+}
+
 /* -------------------------------------------- ADD/UPDATE PATIENT, ADD ASSESSMENT, REQUEST LAB TEST ICON -------------------------------------------- */
 .update-icon {
     position: absolute;
-    top: 15px;
+    top: 18px;
     right: 25px;
-    width: 25px;
+    width: 23px;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -526,7 +661,7 @@ input, select {
 
 .print-icon {
     position: absolute;
-    top: 15px;
+    top: 18px;
     right: 75px;
     background-color: transparent;
     outline: none;
@@ -534,7 +669,7 @@ input, select {
 }
 
 .print-icon img {
-    width: 25px;
+    width: 23px;
     border-radius: 5px;
     cursor: pointer;    
 }
