--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -47,7 +47,7 @@
     <!-- DASHBOARD -->
     <main>
         <div class="doctor-bg">
-            <img src="{{ url_for('static', filename='images/Doctor BG.png') }}">
+            <img src="{{ url_for('static', filename='images/DocCare BG.png') }}">
             <div class="greetings-name">
                 <p>Welcome,</p>
                 <h2>{{ info[0] }}</h2>
@@ -56,6 +56,77 @@
                 <p>Have a nice day at work!</p>
             </div>
             <p class="date-time" id="demo"></p>
+        </div>
+
+        <div class="grid_container">
+            <!-- LOGS -->
+            <div class="grid_item">
+                <div class="logs_list">
+                    <p style="margin-top: 15px; text-align:left;"><strong>Logs</strong></p>
+                    <div class="logs_container">
+                        <table class="logs_table">
+                            <thead>
+                                <th>DATE & TIME</th>
+                                <th>PATIENT</th>
+                                <th>ACTION/EVENT</th>
+                                <th>DETAILS</th>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>2023-12-08 12:31:16</td>
+                                    <td>@doctor</td>
+                                    <td>Added a new patient</td>
+                                    <td>Patient added successfully</td>
+                                </tr>
+                                <tr>
+                                    <td>2023-12-08 12:31:16</td>
+                                    <td>@doctor</td>
+                                    <td>Added a new patient</td>
+                                    <td>Patient added successfully</td>
+                                </tr>
+                                <tr>
+                                    <td>2023-12-08 12:31:16</td>
+                                    <td>@doctor</td>
+                                    <td>Added a new patient</td>
+                                    <td>Patient added successfully</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+            <!-- USERS -->
+            <div class="grid_item">
+                <div class="short_user_list">
+                    <div class="users_short">
+                        <p><strong>Users</strong></p>
+                        <div class="user_buttons">
+                            <a href="{{ url_for('admin.add_user') }}">
+                                <div class="add_user_btn">
+                                    <img src="{{ url_for('static', filename='images/Add User.png') }}" title="Add User">
+                                </div>
+                            </a>
+                            <a href="{{ url_for('admin.user_management') }}">
+                                <div>
+                                    <button class="see_more">SEE MORE</button>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    {% for user in users %}
+                        <table class="user_short_table">
+                            <tr>
+                                <td rowspan="3">
+                                    <strong>{{ user.first_name }} {{ user.last_name }}</strong> <br>
+                                    <em style="color: var(--grayA);">@{{ user.username }}</em> <br>
+                                    <p style="font-size: 13px;">{{ user.user_role }}</p>
+                                </td>
+                            </tr>
+                        </table>
+                    {% endfor %}
+                </div>
+            </div>
         </div>
     </main>
 
