--- a/app/templates/doctor/dashboard/dashboard.html
+++ b/app/templates/doctor/dashboard/dashboard.html
@@ -66,7 +66,7 @@
 
    <main>
         <div class="doctor-bg">
-            <img src="{{ url_for('static', filename='images/Doctor BG.png') }}">
+            <img src="{{ url_for('static', filename='images/DocCare BG.png') }}">
             <div class="greetings-name">
                 <p>Welcome,</p>
                 <h2>{{ info[0] }}</h2>
@@ -75,8 +75,114 @@
                 <p>Have a nice day at work!</p>
             </div>
         </div>
-   </main>
-    
-    
+        <p class="date-time" id="demo"></p>
 
+        <center>
+            <div class="grid_container">
+                <!-- APPOINTMENTS -->
+                <div class="grid_item">
+                    <div class="appoint_list">
+                        <p style="margin-top: 15px; text-align:left;"><strong>Appointment of the Day</strong></p>
+                        <div class="appointement_short_container">
+                            <table class="appointment_short_table">
+                                <thead>
+                                    <th>DATE & TIME</th>
+                                    <th>PATIENT</th>
+                                    <th>STATUS</th>
+                                    <th>CONTACT NUMBER</th>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>2023-12-08 12:31:16</td>
+                                        <td>NANCY SAYSON</td>
+                                        <td class="status_short done">DONE</td>
+                                        <td>09351454490</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2023-12-08 12:31:16</td>
+                                        <td>KURT YURI NOLLAN</td>
+                                        <td class="status_short pending">PENDING</td>
+                                        <td>09351454490</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2023-12-08 12:31:16</td>
+                                        <td>EDWARD JAMES BONGO</td>
+                                        <td class="status_short inprogress">IN PROGRESS</td>
+                                        <td>09351454490</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2023-12-08 12:31:16</td>
+                                        <td>XERXES LANCE LAURENZ LOMPON</td>
+                                        <td class="status_short cancelled">CANCELLED</td>
+                                        <td>09351454490</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- PATIENTS -->
+                <div class="grid_item">
+                    <div class="short_patient_list">
+                        <div class="patients_short">
+                            <p><strong>Patients</strong></p>
+                            <div class="patient_buttons">
+                                <a href="{{ url_for('doctor.add_patient') }}">
+                                    <div class="add_patient_btn">
+                                        <img src="{{ url_for('static', filename='images/Add User.png') }}" title="Add User">
+                                    </div>
+                                </a>
+                                <a href="{{ url_for('doctor.patient') }}">
+                                    <div>
+                                        <button class="see_more">SEE MORE</button>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        {% for patient in patients %}
+                            <table class="patient_short_table">
+                                <tr>
+                                    <td rowspan="3">
+                                        <strong>{{ patient[1] }} {{ patient[3] }}</strong> <br>
+                                        <em style="color: var(--grayA);">{{ patient[15] }}</em>
+                                    </td>
+                                    <td>
+                                        <!-- VIEW RECORD -->
+                                        <form method="GET" action="/doctor/patient_record/">
+                                            <div class="patient_record">
+                                                <input id="patient_id" name="patient_id" value="{{ patient[0] }}" type="hidden">
+                                                <button type="submit" style="background: none; border: none;">
+                                                    <img src="{{ url_for('static', filename='images/Folder.png') }}" title="Patient Record">
+                                                </button>
+                                            </div>
+                                        </form> 
+                                    </td>
+                                </tr>
+                            </table>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </center>
+   </main>
+
+   <script>
+    // TO DISPLAY THE DATE
+    function displayDateAndTime() {
+    const demoElement = document.getElementById('demo');
+
+        function updateDateAndTime() {
+            const currentDateAndTime = new Date();
+            const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+            const formattedDateAndTime = currentDateAndTime.toLocaleDateString(undefined, options);
+
+            demoElement.innerHTML = `TODAY IS ${formattedDateAndTime.toUpperCase()}`;
+        }
+        updateDateAndTime();
+        setInterval(updateDateAndTime);
+    }
+    displayDateAndTime();   
+</script>
+    
 {% endblock %}
