--- a/app/templates/doctor/patient/consultation.html
+++ b/app/templates/doctor/patient/consultation.html
@@ -93,53 +93,56 @@
             </div>
         </div>
 
-        <!-- MEDICAL ASSESSMENT -->
-        <div class="patient-bg">
-            <div class="assessment-table">
-                <table id="example" class="table table-striped" style="width:100%;">
-                    <thead>
-                        <tr>
-                            <th>ASSESSMENT</th>
-                            <th>DATE</th>
-                            <th>ACTION</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for consultation in consultations %}
-                        <tr>
-                            <td>{{ consultation[2] }}</td>
-                            <td>{{ consultation[42] }}</td>
-                            <td>
-                                <div class="action-icon-container">
-                                    <!-- ASSESSMENT -->
-                                    <form method="GET" action="/doctor/assessment/">
-                                        <input id="assessment_id" name="assessment_id" value="{{ consultation[0] }}" hidden>
-                                        <input id="patient_id" name="patient_id" value="{{ consultation[1] }}" hidden>
-                                        <div class="delete-icon">
-                                            <button type="submit" style="background: none; border: none;">
-                                                <img src="{{ url_for('static', filename='images/Folder.png') }}" title="Assessment">
-                                            </button>
-                                        </div>
-                                    </form> 
+        <center>
+            <!-- MEDICAL ASSESSMENT -->
+            <div class="patient-bg">
+                <div class="assessment-table">
+                    <table id="example" class="table table-striped" style="width:100%;">
+                        <thead>
+                            <tr>
+                                <th>ASSESSMENT</th>
+                                <th>DATE</th>
+                                <th>ACTION</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for consultation in consultations %}
+                            <tr>
+                                <td>{{ consultation[2] }}</td>
+                                <td>{{ consultation[42] }}</td>
+                                <td>
+                                    <div class="action-icon-container">
+                                        <!-- ASSESSMENT -->
+                                        <form method="GET" action="/doctor/assessment/">
+                                            <input id="assessment_id" name="assessment_id" value="{{ consultation[0] }}" hidden>
+                                            <input id="patient_id" name="patient_id" value="{{ consultation[1] }}" hidden>
+                                            <div class="delete-icon">
+                                                <button type="submit" style="background: none; border: none;">
+                                                    <img src="{{ url_for('static', filename='images/Folder.png') }}" title="Assessment">
+                                                </button>
+                                            </div>
+                                        </form> 
 
-                                    <!-- PRESCRIPTION -->
-                                    <form method="GET" action="/doctor/prescription/">
-                                        <input id="assessment_id" name="assessment_id" value="{{ consultation[0] }}" hidden>
-                                        <input id="patient_id" name="patient_id" value="{{ consultation[1] }}" hidden>
-                                        <div class="delete-icon">
-                                            <button type="submit" style="background: none; border: none;">
-                                                <img src="{{ url_for('static', filename='images/Prescription.png') }}" title="Prescription">
-                                            </button>
-                                        </div>
-                                    </form> 
-                                </div>
-                            </td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+                                        <!-- PRESCRIPTION -->
+                                        <form method="GET" action="/doctor/prescription/">
+                                            <input id="assessment_id" name="assessment_id" value="{{ consultation[0] }}" hidden>
+                                            <input id="patient_id" name="patient_id" value="{{ consultation[1] }}" hidden>
+                                            <div class="delete-icon">
+                                                <button type="submit" style="background: none; border: none;">
+                                                    <img src="{{ url_for('static', filename='images/Prescription.png') }}" title="Prescription">
+                                                </button>
+                                            </div>
+                                        </form> 
+                                    </div>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
             </div>
-        </div>
+        </center>
+        
     </main>
 
     <!-- Consultation Modal -->
@@ -150,8 +153,8 @@
                     <h1 class="modal-title fs-5">Select Medical Consultation</h1>
                 </div>
                 <div class="modal-body">
-                    <button id="medicalClearance" class="btn-done option">Medical Clearance</button>
                     <button id="medicalCertificate" class="btn-done option">Medical Certificate</button>
+                    <button id="medicalClearance" class="btn-done option">Medical Clearance</button>
                     <button id="healthComplaint" class="btn-done option">Health Complaint</button>
                 </div>
                 <div class="modal-footer">
