--- a/app/templates/doctor/patient/labtest_request.html
+++ b/app/templates/doctor/patient/labtest_request.html
@@ -624,7 +624,7 @@
                         <h1 class="modal-title fs-5">Success</h1>
                     </div>
                     <div class="modal-body">
-                        Laboratory test request has been sent successfully! Please wait patiently for the result.
+                        Laboratory test request has been sent successfully! <br> Please wait patiently for the result.
                     </div>
                     <a href="{{ url_for('doctor.lab_results', patient_id=patient[0]) }}">
                         <div class="modal-footer">
@@ -642,7 +642,7 @@
                         <h1 class="modal-title fs-5">Error</h1>
                     </div>
                     <div class="modal-body">
-                        An error occured. Unable to send the laboratory test request. Please try again.
+                        An error occured. Unable to send the laboratory test request. <br> Please try again.
                     </div>
                     <a href="{{ url_for('doctor.lab_results', patient_id=patient[0]) }}">
                         <div class="modal-footer">
