--- a/app/templates/medtech/laboratory_test.html
+++ b/app/templates/medtech/laboratory_test.html
@@ -36,8 +36,8 @@
             <div class="sidenav-user-bg">
                 <img src="{{ url_for('static', filename='images/Edward.png') }}" class="user-img">
                 <div>
-                    <h3>{{ info[0] }}</h3>
-                    <p>{{ info[2] }}</p>
+                    <h3>{{ medtech[0] }}</h3>
+                    <p>{{ medtech[2] }}</p>
                 </div>
             </div>
             <ul>
