refactor html for user_management

--- a/app/templates/admin/user_management/add_user.html
+++ b/app/templates/admin/user_management/add_user.html
@@ -82,7 +82,7 @@
                     </div>
 
                     <div class="inputBox password">
-                        <input type="text" required="required" name="password" autocomplete="off" value="{{ password }}" readonly>
+                        <input type="password" required="required" name="password" autocomplete="off" value="{{ password }}" readonly>
                         <span>Password</span>
                     </div>
                     
