--- a/app/templates/admin/user_management/user_info.html
+++ b/app/templates/admin/user_management/user_info.html
@@ -96,7 +96,7 @@
                     </div>
 
                     <div class="inputBox password">
-                        <input type="text" required="required" name="password" value="{{ user[2] }}" disabled readonly>
+                        <input type="password" required="required" name="password" value="{{ user[2] }}" disabled readonly>
                         <span>PASSWORD</span>
                     </div>
 
@@ -255,7 +255,6 @@
                 }, 8000);
             }
         }
-
 
     </script>
 
